# QwiicRelay-Rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Claude.md  README.md  overview.md  project_description.md  todo.md
benches/: timing_benchmarks.rs
examples/: error_handling.rs  relay_status_demo.rs  timing_config.rs  verification_demo.rs
src/: error.rs  lib.rs  main.rs  tests.rs  verification.rs
