[package]
name = "qwiic-relay-rs"
description = "This library aims at controlling SparkFun Qwiic Relays using I2C."
version = "0.1.11"
authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>", "Ralph Ursprung <ralph.ursprung@gmail.com>"]
keywords = ["embedded", "embedded-hal-driver", "sparkfun", "relay", "i2c"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/qwiic-relay-rs"
repository = "https://github.com/ktheindifferent/QwiicRelay-Rust"
edition = "2024"
rust-version = "1.85.0"

[features]
defmt = [ "dep:defmt" ]

[dependencies]
embedded-hal-async = "1"
defmt = { version = "1", optional = true }
