[package]
name = "qwiic-relay-rs"
description = "This library aims at controlling Qwiic Relays using I2C from Linux."
version = "0.1.11"
edition = "2021"
authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/qwiic-relay-rs"
repository = "https://github.com/PixelCoda/QwiicRelay-Rust"

[dependencies]
i2cdev = "0.4.4"
enum_primitive = "0.1.1"
