[package]
name = "qwiic-relay-rs"
description = "This library aims at controlling SparkFun Qwiic Relays using I2C."
version = "0.1.11"
authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>", "Ralph Ursprung <ralph.ursprung@gmail.com>"]
keywords = ["embedded", "embedded-hal-driver", "sparkfun", "relay", "i2c"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/qwiic-relay-rs"
repository = "https://github.com/ktheindifferent/QwiicRelay-Rust"
edition = "2024"
rust-version = "1.85.0"

[features]
default = ["std"]
std = ["dep:i2cdev", "dep:enum_primitive"]
embedded = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]

[dependencies]
embedded-hal-async = { version = "1", optional = true }
defmt = { version = "1", optional = true }
i2cdev = { version = "0.4.4", optional = true }
enum_primitive = { version = "0.1.1", optional = true }

[[bench]]
name = "timing_benchmarks"
harness = false